# fmemcpy

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cmemcpy.c  fmemcpy.f90  test.f90
cmake/: FMC_Compilers.cmake
cmake/compilers/: fmc_flags_cray.cmake  fmc_flags_fujitsu.cmake  fmc_flags_gnu.cmake  fmc_flags_intel.cmake  fmc_flags_nvidia.cmake
execute/: run.sh
src/: CMakeLists.txt  cpy_equal.f90  cpy_loop.f90  fmemcpy.f90  myprecision.f90  utils.f90
tests/: CMakeLists.txt  evaluate_fmemcpy.f90  test.f90
